@@ -15,9 +15,8 @@ import lombok.Setter;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import org.gridsuite.modification.server.ModificationType;
 import org.gridsuite.modification.server.dto.*;
-import org.gridsuite.modification.server.entities.equipment.modification.GeneratorModificationEntity;
-import org.gridsuite.modification.server.entities.equipment.modification.LoadModificationEntity;
 
 /**
  * @author Etienne Homer <etienne.homer at rte-france.com>
@@ -30,25 +29,16 @@ import org.gridsuite.modification.server.entities.equipment.modification.LoadMod
 public class TabularModificationEntity extends ModificationEntity {
 
     @Column(name = "modificationType")
-    private String modificationType;
+    @Enumerated(EnumType.STRING)
+    private ModificationType modificationType;
 
     @OneToMany(cascade = CascadeType.ALL, orphanRemoval = true)
     @OrderColumn
     private List<ModificationEntity> modifications;
 
-    public TabularModificationEntity(TabularModificationInfos tabularModificationInfos) {
+    public TabularModificationEntity(@NonNull TabularModificationInfos tabularModificationInfos) {
         super(tabularModificationInfos);
-        modificationType = tabularModificationInfos.getModificationType();
-        switch (modificationType) {
-            case "GENERATOR_MODIFICATION":
-                modifications = tabularModificationInfos.getModifications().stream().map(generatorModificationInfos -> new GeneratorModificationEntity((GeneratorModificationInfos) generatorModificationInfos)).collect(Collectors.toList());
-                break;
-            case "LOAD_MODIFICATION":
-                modifications = tabularModificationInfos.getModifications().stream().map(loadModificationInfos -> new LoadModificationEntity((LoadModificationInfos) loadModificationInfos)).collect(Collectors.toList());
-                break;
-            default:
-                break;
-        }
+        assignAttributes(tabularModificationInfos);
     }
 
     @Override
@@ -66,28 +56,16 @@ public class TabularModificationEntity extends ModificationEntity {
     @Override
     public void update(@NonNull ModificationInfos modificationInfos) {
         super.update(modificationInfos);
-        TabularModificationInfos tabularModificationInfos = (TabularModificationInfos) modificationInfos;
+        assignAttributes((TabularModificationInfos) modificationInfos);
+    }
+
+    private void assignAttributes(TabularModificationInfos tabularModificationInfos) {
         modificationType = tabularModificationInfos.getModificationType();
-        modifications.clear();
-        switch (modificationType) {
-            case "GENERATOR_MODIFICATION":
-                modifications.addAll(tabularModificationInfos.getModifications().stream().map(generatorModificationInfos -> new GeneratorModificationEntity((GeneratorModificationInfos) generatorModificationInfos)).collect(Collectors.toList()));
-                break;
-            case "LOAD_MODIFICATION":
-                modifications.addAll(tabularModificationInfos.getModifications().stream().map(loadModificationInfos -> new LoadModificationEntity((LoadModificationInfos) loadModificationInfos)).collect(Collectors.toList()));
-                break;
-            default:
-                break;
+        if (modifications == null) {
+            modifications = tabularModificationInfos.getModifications().stream().map(ModificationInfos::toEntity).toList();
+        } else {
+            modifications.clear();
+            modifications.addAll(tabularModificationInfos.getModifications().stream().map(ModificationInfos::toEntity).toList());
         }
-    }
-
-    @Override
-    public boolean equals(Object o) {
-        return super.equals(o);
-    }
-
-    @Override
-    public int hashCode() {
-        return super.hashCode();
     }
 }
